ci-cd: fix MAVEN_OPTS variable